# sitemap2urllist

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  bacon.toml  cliff.toml  codebook.toml  package.json  pnpm-lock.yaml
.changeset/: best-effort-cache-store.md  bodyless-cache-entries.md  bound-concurrent-fetches.md  cache-lock-truncation.md  config.json  curly-lines-brake.md  dark-pugs-smell.md  fix-retry-gate-overflow.md  granular-timeouts.md  gzipped-sitemaps.md  lenient-sitemap-parsing.md  multi-member-gzip.md  redirect-warning.md  response-size-cap.md  retry-after-http-date.md  rotate-304-validators.md  shared-http-client.md  shiny-years-grin.md  sixty-seals-swim.md  stdout-broken-pipe.md  warn-on-zero-urls.md  warnings-by-default.md
.github/: dependabot.yml
.github/workflows/: audit.yml  binaries.yml  general.yml  release.yml  zizmor.yml
src/: args.rs  cache.rs  error.rs  fetcher.rs  lib.rs  main.rs  sitemap.rs  urlparser.rs
