[package]
name = "sitemap2urllist"
version = "0.1.4"
edition = "2024"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "Read a sitemap and output a list of URLs."
repository = "https://github.com/lukehsiao/sitemap2urllist"
homepage = "https://github.com/lukehsiao/sitemap2urllist"
license = "BlueOak-1.0.0"
keywords = ["sitemap", "urllist"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "wrap_help", "cargo"] }
clap-verbosity-flag = "3.0.4"
csv = "1.4.0"
dashmap = "6.1.0"
humantime = "2.3.0"
jiff = { version = "0.2.23", features = ["serde"] }
log = "0.4.29"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.13.2", features = ["gzip", "brotli", "zstd", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
