[package]
name = "sitemap2urllist"
version = "0.1.7"
edition = "2024"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "Read a sitemap and output a list of URLs."
repository = "https://github.com/lukehsiao/sitemap2urllist"
homepage = "https://github.com/lukehsiao/sitemap2urllist"
license = "BlueOak-1.0.0"
keywords = ["sitemap", "urllist"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help", "cargo"] }
clap-verbosity-flag = "3.0.4"
dashmap = { version = "6.2.1", features = ["serde"] }
directories = "6.0.0"
humantime = "2.3.0"
jiff = { version = "0.2.28", features = ["serde"] }
log = "0.4.32"
miette = { version = "7.6.0", features = ["fancy"] }
quick-xml = { version = "0.40", features = ["serialize"] }
reqwest = { version = "0.13.4", features = ["gzip", "brotli", "zstd", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
hegeltest = { version = "0.14.18", features = ["jiff"] }
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
wiremock = "0.6.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
